# setiastrosuitepro

./: .gitignore  README.md  pyproject.toml
src/setiastro/saspro/: abe.py  convo.py  cpp_migration_summary.md  live_stacking.py  stacking_suite.py  star_alignment.py
src/setiastro/saspro/cpp/: CMakeLists.txt  background_extractor.cpp  background_extractor.hpp  bindings.cpp  deconvolver.cpp  deconvolver.hpp  image_ops.cpp  image_ops.hpp  live_stacker.cpp  live_stacker.hpp  stacking.cpp  stacking.hpp
src/setiastro/saspro/legacy/: numba_utils.py
